fixed wrapping inside pre

--- a/src/styles/common/markdown.module.scss
+++ b/src/styles/common/markdown.module.scss
@@ -27,7 +27,7 @@ $margin: 1em;
       right: 4px solid transparentize($blue, 0.9);
     }
     font-family: monospace;
-    font-size: 0.9em;
+    font-size: 0.8em;
     border-radius: 2px;
     width: 100%;
     overflow: auto;
@@ -38,6 +38,7 @@ $margin: 1em;
     code {
       color: transparentize($wisegreen, 0.1);
       font-family: monospace;
+      white-space: pre-wrap;
     }
   }
 
@@ -47,7 +48,7 @@ $margin: 1em;
       padding: 2px 4px;
       border-radius: 0.3em;
       color: transparentize($wisegreen, 0.1);
-      font-size: 0.9em;
+      font-size: 0.8em;
     }
   }
 
